# clipboard-bridge

./: .gitignore  setup.sh
.claude/: settings.local.json
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/clipbridge/app/crypto/: Crypto.kt
android/app/src/main/java/com/clipbridge/app/network/: AppRepository.kt  SignalingClient.kt
android/app/src/main/res/layout/: activity_main.xml  activity_share.xml  fragment_devices.xml  fragment_pair.xml  fragment_send.xml  fragment_settings.xml  item_peer.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
desktop/: .env.example  index.html  package-lock.json  package.json
desktop/src/: App.css  App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  notification.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: DevicesView.css  DevicesView.tsx  HistoryView.css  HistoryView.tsx  IncomingToast.css  IncomingToast.tsx  NotificationWindow.css  NotificationWindow.tsx  PairView.css  PairView.tsx  QuickSendPicker.css  QuickSendPicker.tsx  SendView.css  SendView.tsx  SettingsView.css  SettingsView.tsx  Sidebar.css  Sidebar.tsx
desktop/src/lib/: crypto.ts  storage.ts  ws.ts
desktop/src/store/: appStore.ts
server/: Dockerfile  fly.toml  package-lock.json  package.json
server/src/: index.js  logger.js  pairing.js  registry.js  router.js
(+3 files in other folders)
